--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc -p .",
     "clean": "rimraf ./built",
     "rebuild": "npm run clean && npm run build",
-    "gen:docs": "typedoc --out docs --mode file --exclude  __test__"
+    "doc": "typedoc --out docs --mode file --exclude  **/__test__/*"
   },
   "keywords": ["eLectron", "window", "state", "async", "store"],
   "author": "D10221",
