--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "typings": "built/index.d.ts",
   "scripts": {
     "test": "electron-mocha test.js",
-    "build": "tsc -p .",
+    "build": "tsc -p ./src",
     "clean": "rimraf ./built",
     "rebuild": "npm run clean && npm run build",
     "doc": "typedoc --theme minimal --out docs --mode file --exclude  **/__test__/*",
-    "dist": "tsc -p ./tsconfig.prod.json"
+    "dist": "tsc -p ./src/tsconfig.prod.json"
   },
   "keywords": ["eLectron", "window", "state", "async", "store"],
   "author": "D10221",
