--- a/src/tsconfig.prod.json
+++ b/src/tsconfig.prod.json
@@ -16,5 +16,9 @@
     },
     "include": [
         "./**/*.ts"
+    ],
+    "exclude": [
+        "./__app__/**/*",
+        "./__test__/**/*"
     ]
 }
