--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc -p ./src",
     "clean": "rimraf ./built",
     "rebuild": "npm run clean && npm run build",
-    "doc": "typedoc --theme minimal --out docs --mode file --exclude  **/__test__/*",
+    "doc": "typedoc --theme minimal --out docs --mode file --exclude  **/__test__/* **/__app__/*",
     "dist": "tsc -p ./src/tsconfig.prod.json",
     "redist": "rimraf ./dist && npm run dist"
   },
