--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,6 @@
     "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-    "./**/*.ts"
+    "./src/**/*.ts"
   ]
 }
