--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -15,7 +15,7 @@
         "removeComments": true
     },
     "include": [
-        "./**/*.ts"
+        "./src/**/*.ts"
     ],
     "exclude": [
         "./__app__/**/*",
