--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-window-state-async",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "Electron window state async store",
   "private": true,
   "main": "dist/index.js",
