--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^2.6.8",
-    "electron-json-storage-async": "git+https://github.com/D10221/electron-json-storage-async.git"
+    "electron-json-storage-async": "git+https://github.com/D10221/electron-json-storage-async.git",
+    "fs-extra": "^3.0.1"
   },
   "devDependencies": {
     "@types/debug": "0.0.29",
     "@types/electron": "^1.4.38",
+    "@types/fs-extra": "^3.0.2",
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.22",
     "@types/shelljs": "^0.7.1",
